[tool.poetry]
name = "coconut_backend"
version = "0.1.0"
description = ""
authors = ["Arpan Pandey <arpan@hackersreboot.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.3.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
gunicorn = "^22.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
